--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -312,6 +312,10 @@ img {
   font-size: var(--big-font-size);
 }
 
+/* .home__title2 {
+  font-size: var(--h1-font-size);
+} */
+
 .home__subtitle {
   font-size: var(--h3-font-size);
   color: var(--text-color);
